<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F8FD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/txt_nombre"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_disc" />

    <SeekBar
        android:id="@+id/positionBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView_disc"
        android:layout_width="360dp"
        android:layout_height="345dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imageView_disc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jordan_feliz_faith" />

    <ImageButton
        android:id="@+id/button_return"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_return"
        android:onClick="Anterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionBar"
        app:srcCompat="@drawable/btn_return" />

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_play"
        android:onClick="Reproducir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionBar"
        app:srcCompat="@drawable/play_white" />

    <ImageButton
        android:id="@+id/button_next"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_next"
        android:onClick="Siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionBar"
        app:srcCompat="@drawable/btn_next" />

    <ImageButton
        android:id="@+id/button_repet"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_repet"
        android:onClick="Repetir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_return"
        app:srcCompat="@drawable/repet_white" />

    <ImageButton
        android:id="@+id/button_stop"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_stop"
        android:onClick="Detener"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_next"
        app:srcCompat="@drawable/btn_stop" />

    <TextView
        android:id="@+id/elapsedTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="casual"
        android:text="@string/textView_inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionBar" />

    <TextView
        android:id="@+id/remainingTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="casual"
        android:text="@string/textView_fin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionBar" />

</androidx.constraintlayout.widget.ConstraintLayout>